Fix the horizontal scrolling problem in Mobile view due to Learning Section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -339,6 +339,11 @@ article .content {
   padding-left: 16px;
 }
 
+@media only screen and (max-width: 450px) {
+  #academy-life .column-left {
+    display: none;
+  }
+}
 
 @media only screen and (min-width: 760px) {
 
@@ -347,6 +352,7 @@ article .content {
   }
 
 }
+
 
 @media only screen and (max-width: 760px) {
 
@@ -368,14 +374,6 @@ article .content {
   align-items: flex-start;
   }
 }
-/* Media Queries: Mobile for Academy-life section */
-
-@media only screen and (max-width: 450px) {
-  #academy-life .column-left{
-    display: none;
-  }
-
-
 
 /* Learning Section with grid of courses */
 
@@ -388,6 +386,7 @@ article .content {
 div.flex-container {
   justify-content: center;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 #learning article{
@@ -432,7 +431,7 @@ div.flex-container {
 @media only screen and (max-width: 450px) {
   #learning article{
     width: 100%;
-    margin: 0 1rem .5rem 1rem;
+    margin: 0 0 .5rem 0;
   }
 
   #learning img, #learning h4, #learning p {
@@ -443,6 +442,7 @@ div.flex-container {
     background-color: #35353d;
     padding: 1rem;
     margin: 0;
+    width: 100%;
   }
 
   #learning h3 {
@@ -451,8 +451,13 @@ div.flex-container {
   }
 
   #learning {
-    padding-bottom: 2rem;
+    padding: 2rem 1rem;
     border-bottom: 1px solid #f5f5f4;
+  }
+
+  article.course {
+    margin: 0;
+    padding: 0;
   }
 }
 
